--- a/html/hellow.html
+++ b/html/hellow.html
@@ -1,18 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<body>
-<h1>나다 </h1>
-    <h2>너다</h2>
-hellow
-<!-- 사진 보여주기 -->
-<img src="pic/java.jpg">
 
-<!-- 링크 걸어주기 -->
-<a href="http://www.naver.com" target="_blank">naver</a>
-</body>
-</html>
+<body>
+    <div class="container">
+        <div class="blog-post">
+            <h1>나다 </h1>
+            <p class="date">March 11th, 2015</p>
+            <h2>
+                <P>ctrl + e </P>
+                <P>ctrl + shift + l</P>
+            </h2>
+
+            <p class="main-text">how are you?????</p>
+            <img src="pic/java.jpg" alt="The HTMLS logo">
+
+        </div>
+
+        <div class="other-posts">
+            <div class="other">
+                The fisrt other blog post
+            </div>
+            <div class="other">
+                The fisrt other blog post
+            </div>
+            <div class="other">
+                The fisrt other blog post
+            </div>
+        </div>
+
+        <div class="clearfix"></div>
+
+        <div class="author-box">
+
+            <!-- 사진 보여주기 -->
+            <img src="pic/abc.jpg" alt="Author photo">
+
+            <!-- 링크 걸어주기 -->
+            <a href="http://www.naver.com" target="_blank">naver</a>
+        </div>
+        <p class="author-text">Jackson Gonzalez</p>
+    </div>
+
+
+</body></html>
