--- a/html/hellow.html
+++ b/html/hellow.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="main.css">
+    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
 </head>
 
 <body>
@@ -31,6 +32,10 @@
             </div>
             <div class="other">
                 The fisrt other blog post
+                
+            </div>
+            <div class="other">
+
             </div>
         </div>
 
